--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ REACT_APP_APP_NAME=مشرف - نظام إدارة المشاريع
 REACT_APP_VERSION=2.0.0
 
 # Development
-NODE_ENV=development
+NODE_ENV=production
 GENERATE_SOURCEMAP=false
 
 # Language & RTL
