--- a/.env
+++ b/.env
@@ -12,8 +12,9 @@ REACT_APP_APP_NAME=مشرف - نظام إدارة المشاريع
 REACT_APP_VERSION=2.0.0
 
 # Development
-NODE_ENV=production
+# NODE_ENV=production
 GENERATE_SOURCEMAP=false
+FAST_REFRESH=false
 
 # Language & RTL
 REACT_APP_DEFAULT_LANGUAGE=ar
