--- a/package.json
+++ b/package.json
@@ -46,11 +46,10 @@
     "react-pdf": "^6.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-to-print": "^3.1.0",
     "recharts": "^3.0.2",
     "socket.io-client": "^4.6.1",
-    "sqlite3": "^5.1.7",
     "styled-components": "^5.3.10",
     "stylis": "^4.1.3",
     "stylis-plugin-rtl": "^2.1.1",
